chore/#3: strings 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Compose_Study</string>
+
+    <string name="onboarding_image_text">온보딩 이미지</string>
 </resources>
