chore/#11: strings 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Compose_Study</string>
 
     <string name="onboarding_image_text">온보딩 이미지</string>
+
+    <string name="article_card_time_icon">time 아이콘</string>
 </resources>
